# fastapi_edu_artyom_shumeyko

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
fastapi/: alembic.ini  config.py  main.py
fastapi/migrations/: env.py
fastapi/migrations/versions/: 58147dfd1585_database_creation.py
fastapi/models/: models.py
