[tool.poetry]
name = "fastapi-edu-artyom-shumeyko"
version = "0.1.0"
description = ""
authors = ["Doppelgangers <6666genocide666@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
