[tool.poetry]
name = "fastapi-edu-artyom-shumeyko"
version = "0.1.0"
description = ""
authors = ["Doppelgangers <6666genocide666@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
